Fixes vertical alignment of sortable tables
Sortable tables have always single line rows and should not
be top aligned.

--- a/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
@@ -101,7 +101,6 @@ table {
     td, th {
       border: none !important;
     }
-
   }
 
   th:not(.wrap-text), td.actions, td.no-wrap, .state {
@@ -113,6 +112,9 @@ table {
   }
 
   tbody {
+
+    &.ui-sortable td { vertical-align: middle }
+
     tr {
         img {
           border: 1px solid very-light($color-3, 6);
